--- a/vue/maps2.css
+++ b/vue/maps2.css
@@ -57,10 +57,8 @@
     width: 200px;
 }
 
-#get-distance {
-    width: 50%;
-    height: 40px;
-    text-align: middle;
-    background-color: aliceblue;
+#intro {
+    padding-left: 0.7%;
 }
+
 
